# my-autofill-core

./: Cargo.toml
src/: main.rs
src/my_autofill/: instruction.rs  mod.rs
src/my_autofill/actions/: click.rs  mod.rs  press.rs  type_word.rs  visit.rs  wait.rs
