[package]
name = "my-autofill-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
async-std = "1.12.0"
async-trait = "0.1.73"
playwright = "0.0.20"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = "1.33.0"
